from jar file ooot java file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".RefillActivity">
         </activity>
+        <activity android:name=".ReminderActivity"/>
     </application>
 
 </manifest>
